Stable versions
---------------

4.3.1 ():
	Fix bugs caught in the OpenMPT test cases:
	- fix IT filter envelope range
	- fix IT envelope carry after envelope end
	- fix XM K00 effect handling
	- fix XM note limits
	Other changes:
	- fix IT tone portamento in first note (reported by Jan Engelhardt)
	- fix XM invalid memory access in event reader
	- fix STM empty note event read
	- fix ABK loader test in Win32
	- fix MOD period range enforcing (reported by Jason Gibson)
	- fix EMOD instrument finetune (reported by Andreas Argirakis)
	- fix NoisePacker1 loader (reported by Andreas Argirakis)
	- fix ST2.6 speed effect (reported by Saga Musix)
	- fix crash in envelope reset with invalid instrument
	- fix module titles and instrument names in Mac OS X
	- fix row delay initialization on new module
	- refactor depacking code
	- code cleanup

4.3.0 (20140926):
	Fix bugs reported by Sami Jumppanen:
	- fix MED4 instrument numbering
	- fix MED effect FFF (turn note off)
	- fix MED synth finetune effect
	Fix bugs reported by Alexander Null:
	- fix fine volume slide memory
	- fix IT portamento after note end in sample mode
	- fix S3M portamento after note end
	Fix bugs caught in the OpenMPT test cases:
	- add XM and IT envelope loop and sustain point quirk
	- fix Amiga limits for notes with finetune
	- fix XM invalid offset handling
	- fix XM note release reset on new volume
	- fix XM pattern loader to honor header size
	- fix XM fine volume slide effect memory
	- fix XM fine pitch slide effect memory
	- fix XM finetune effect
	- fix IT portamento if offset effect is used
	- fix IT NNA on invalid sample mapping
	- fix IT filter envelope index reset
	- fix IT envelope carry on note cut events
	- fix IT envelope reset on new instrument
	- fix IT instrument change on portamento in compatible GXX mode
	- fix IT unmapped sample parsing
	- fix IT filter cutoff reset
	Other changes:
	- add API call to load a module from a file handle
	- add API call to set default pan separation value