@@ -5,6 +5,7 @@ Stable versions
 	Fix bugs caught in the OpenMPT test cases:
 	- fix IT filter envelope range
 	- fix IT envelope carry after envelope end
+	- fix XM note off with volume command
 	- fix XM K00 effect handling
 	- fix XM note limits
 	Other changes:
